corpus/cpp/overload/case-07/snapshots/gcc9_12/single_sink_structured/render.ci.txt
src/main.cpp:5:17: error: [type_mismatch] invalid conversion from 'const char*' to 'short int'
raw : invalid conversion from 'const char*' to 'short int'
| src/main.cpp:5:17
|     takes_short("x");
|                 ^~

src/main.cpp:1:18: note: [unknown]   initializing argument 1 of 'void takes_short(short int)'
note: wrapper confidence is low; verify against the preserved raw diagnostics
raw :   initializing argument 1 of 'void takes_short(short int)'
| src/main.cpp:1:18
| void takes_short(short);
|                  ^~~~